--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,13 @@ main {
 }
 
 .carousel-caption {
-    margin-top: 20px!important;
+    position: absolute;
+    bottom:0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.1); /* fondo semitransparente */
+    padding: 0;
+    color: white;
 }
 
 /* footer */
@@ -102,7 +108,7 @@ main {
 
     
 .footer-container {
-    padding-top: 50px;
+    padding-top: 25px;
     height: 300px;
     width: 100%;
     border-top: 5px solid #cc2059;
@@ -166,7 +172,9 @@ main {
 
 /* @media */
 
-@media (max-width: 768px) {
+/* mobile */
+
+@media (max-width: 768px) {  
     /* header */
     .navbar-brand img {
         width: 100%;
@@ -177,18 +185,29 @@ main {
     
     /* main */
     .h1-index {
-        font-size: 1em;    
+        font-size: 1.5em;
+           
     }
     .row img {
         width: 90%;
     }
+    .carousel {
+        padding-bottom: 50;
+    }
 
     /* footer */
-    .footer-container {
-        padding: 25;
-    }
+
+    .footer-element {
+        width: 50%;
+        }
+        
+    
     .footer-logo {
         display: none;
+    }
+
+    .footer-mail {
+        align-self: center;
     }
     .footer-mail a {
         font-size: 15px;
@@ -209,6 +228,7 @@ main {
         width: 100%;
     }
     .footer-copyright p {
+        margin-bottom: 20px;
         font-size: 0.8rem;
     }
 }
