--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@
 
 /* header */
 
-.header__container {
+.fm__header-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -72,11 +72,11 @@ main {
   background-size: cover;  
 }
 
-.h1-index {
+.fm__h1-index {
     padding: 50px;
     color: #f5f5f5;
-    font-family: jaldi;
-    font-size: 2em;
+    font-family: audiowide;
+    font-size: 3em;
     text-align: center;
 
 }
@@ -95,21 +95,212 @@ main {
     color: white;
 }
 
-/* footer */
+/* main prodcuts */
 
-.footer img {
-        width: 200px;
+.fm__h1-main {
+    padding: 150px 0 50px;
+    text-align: center;
+    color: #f5f5f5;
+    font-family: audiowide;
+    font-size: 3em;
+}
+
+.fm__cards {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+}
+
+.card-img {
+    display: flex;
+    justify-content: center;
+}
+
+.card-img img {
+    width: 100%;
+    min-width: 200px;
+}
+
+.fm__card__description{
+    padding: 0 10px;
+    background-color: rgba(0, 0, 0, 0.1); /* fondo semitransparente */
+}
+
+.fm__card__description h2 {
+    text-align: center;
+    color: #f5f5f5;
+    font-family: audiowide;
+    font-size: 1.5em;
+
+}
+
+.fm__card__description p {
+    text-align: justify;
+    padding: 0 30px;
+    color: #f5f5f5;
+    font-family: jaldi;
+    font-size: 1em;
+
+}
+
+/* main contact */
+
+.fm__Main__contact {
+    height: 1300px;
+}
+
+.row__form {
+    padding-top: 200px;
+}
+
+.row__info {
+    margin-top: 50px;
+}
+.fm__contact__container__form {
+    align-self: center;
+    text-align: center;
+    max-width: 550px;
+    max-height: 700px;
+    padding: 4.5em 2em;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px -5px;
+    background-color: #d8d3d3;
+    border: 4px solid #cc2059;
+    font-family: jaldi;
+    font-size: 1em;
+    color: #000000
+}
+
+.fm__contact__container__form--h2 {
+    color: #030303;
+    font-family: audiowide;
+    font-size: 2em;
+}
+
+.fm__contact__container__form--description {
+    margin: 15px auto;
+}
+
+.form-container {
+    width: 100%;
+}
+
+.form-group label {
+    font-family: audiowide;
+}
+
+.form-input {
+    width: 100%;
+    height: 30px;
+    border: none;
+    outline: none;
+    text-align: center;
+    font-family:jaldi;
+    font-size: 1em;
+    background-color: #f5deb3;
+    border-bottom: 3px solid #2076f7;
+}
+    .form-input:focus {
+        border: 2px dotted #0a0a0a;
+    }
+.form-text_area {
+    width: 100%;
+    height: 140px;
+    text-align: justify;
+    font-family:jaldi;
+    font-size: 0.8em;
+    background-color: #f5deb3;
+    border-bottom: 3px solid #2076f7;
+}
+    .form-text_area:focus {
+    border: 2px dotted #0a0a0a;
     }
 
-    footer h2 {
+.form-submit {
+    width: 200px;
+    height: 50px;
+    margin: 30px;
+    font-family: audiowide;
+    background-color: #c5bdbdde;
+    border: 3px solid #2076f7;
+    cursor: pointer;
+}
+
+.fm__contact__container__image {
+    width: 400px;
+}
+
+.fm__contact__container__image img {
+    width: 100%;
+}
+
+.fm__contact__container__info {
+    width: 400px;
+    align-self: flex-end;
+    margin-bottom: 30px;
+    background-color: #f5f5f5;
+    color: #0e0d0d;
+    border: 5px solid #cc2059;
+    border-radius: 5px;
+    font-family: jaldi;
+}
+
+.fm__contact__container__info__list li {
+    padding: 20px;
+    list-style: none;
+}
+
+.fm__contact__container__info__list--title {
+    text-align: center;
+}
+
+/* main faq */
+
+.accordion-header {
+    font-family: audiowide;
+}
+
+.accordion-body {
+    font-family: jaldi;
+}
+
+.accordion-item {
+    background-color: #f5deb3;
+}
+
+/* main about-us */
+
+
+.fm__us-container__section {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    border: 2px solid rgb(31, 30, 30);
+}
+
+.fm__us-container__section__article--text {
+    font-family: jaldi-bold;
+    text-align: justify;
+}
+
+.fm__us-container__section__article--text2 {
+    font-family: jaldi-bold;
+    text-align: center;
+}
+
+.fm__us-container__section__article--text h2 {
+    text-align: center;
+}
+/* footer */
+
+
+footer h2 {
         font-size: 1.5rem;
         -webkit-text-stroke: 0.5px #cc2059
     }
 
     
-.footer-container {
-    padding-top: 25px;
-    height: 300px;
+.fm__footer__container {
+    padding: 25px;
     width: 100%;
     border-top: 5px solid #cc2059;
     background-color: #3d3c3cde;
@@ -122,7 +313,7 @@ main {
     width: 450px;
 }
 
-.footer-copyright {
+.fm__footer__container__copyright {
     width: 100%;
     font-family: audiowide;
     color: #f5f5f5;
@@ -130,44 +321,43 @@ main {
 }
 
 
-.footer-links  {
+.fm__footer__container__links  {
     text-decoration: none;
     color: #f4f5f8;
  }
 
-    .footer-links a {
+    .fm__footer__container__links a {
         color: #f4f5f8;
     }
-        .footer-links a :hover {
+        .fm__footer__container__links a :hover {
             transform: scale(1.2);
         }
 
 
-.footer-mail {
-    justify-self: flex-end;
-    align-self: flex-end;
-    
-}
-    .footer-mail a {
+
+    .fm__footer__container__mail a {
         font-size: 25px;
-        font-family:jaldi;
+        font-family:jaldi !important;
         text-decoration: none;
         color: #f4f5f8;
     }
-        .footer-mail a:hover {
+        .fm__footer__container__mail a:hover {
             transform: scale(1.2);
         }
 
-.footer-logo {
+.fm__footer-logo {
     justify-content: flex-end;
     align-self: flex-end;
     width: 450px;
     text-align: center;
     height: 100px;
 }
-    .footer-logo img {
-        width: 200px;
-        height: 100%;
+.fm__footer__container__logo {
+    text-align: center;
+}
+.fm__footer__container__logo img {
+    width: 200px;
+        
     }
 
 /* @media */
@@ -182,9 +372,13 @@ main {
     .header__container {
         justify-content: flex-start;
     }
+
+    .fm__header-container {
+        justify-content: start;
+    }
     
     /* main */
-    .h1-index {
+    .fm__h1-index {
         font-size: 1.5em;
            
     }
@@ -200,37 +394,30 @@ main {
     .footer-element {
         width: 50%;
         }
-        
+
+    .fm__footer__container__email h2 {
+        font-size: 1em;
+    }
+    .fm__footer__container__email a {
+        font-family: jaldi;
+        font-size: 1em;
+    }
+
+
+    .fm__footer__container__links h2 {
+        font-size: 1em;
+    }
+
+    .fm__footer__container__links a {
+        font-size: 1em;
+    }
+
+    .fm__footer__container__copyright p{
+        font-size: 1em;
+    }
+
     
-    .footer-logo {
-        display: none;
-    }
-
-    .footer-mail {
-        align-self: center;
-    }
-    .footer-mail a {
-        font-size: 15px;
-        margin-left: 10px;
-    }
-    footer h2 {
-        font-size: 0.8rem;
-        margin-bottom: 0;
-    }
-
-    .footer-mail h2 {
-        margin-left: 10px;
-    }
-    .links-social {
-        display: none;
-    }
-    .footer-copyright {
-        width: 100%;
-    }
-    .footer-copyright p {
-        margin-bottom: 20px;
-        font-size: 0.8rem;
-    }
 }
+    
 
 
