--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ main {
 }
 
 .fm__contact__container__image {
-    width: 400px;
+    
 }
 
 .fm__contact__container__image img {
@@ -235,7 +235,7 @@ main {
 }
 
 .fm__contact__container__info {
-    width: 400px;
+    
     align-self: flex-end;
     margin-bottom: 30px;
     background-color: #f5f5f5;
@@ -378,15 +378,24 @@ footer h2 {
     }
     
     /* main */
-    .fm__h1-index {
-        font-size: 1.5em;
-           
-    }
+
+    .fm__h1-main {
+        font-size: 2em; /* Puedes ajustar este valor según tus necesidades */
+      }
+    
     .row img {
         width: 90%;
     }
     .carousel {
         padding-bottom: 50;
+    }
+
+    .fm__faq__container__accordion {
+        padding: 10px;
+    }
+
+    .fm__contact__container__form {
+        padding: 5px;
     }
 
     /* footer */
