--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ main {
 }
 
 .fm__contact__container__image {
-    width: 400px;
+  
 }
 
 .fm__contact__container__image img {
@@ -235,7 +235,7 @@ main {
 }
 
 .fm__contact__container__info {
-    
+    min-width: 400px;
     align-self: flex-end;
     margin-bottom: 30px;
     background-color: #f5f5f5;
@@ -397,6 +397,8 @@ footer h2 {
     .fm__contact__container__form {
         padding: 5px;
     }
+
+
 
     /* footer */
 
