--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ main {
     padding: 50px;
     color: #f5f5f5;
     font-family: audiowide;
-    font-size: 3em;
+    font-size: 2rem;
     text-align: center;
 
 }
@@ -377,7 +377,7 @@ footer h2 {
 
 @media (max-width: 768px) {
 
-    /* header */
+    /* @header */
     .navbar-brand img {
         width: 100%;
     }
@@ -390,7 +390,8 @@ footer h2 {
         justify-content: start;
     }
 
-    /* main */
+    
+    /* @main */
 
     .fm__h1-main {
         font-size: 2em;
@@ -413,9 +414,7 @@ footer h2 {
         padding: 5px;
     }
 
-
-
-    /* footer */
+    /* @footer */
 
     .footer-element {
         width: 50%;
