--- a/sass/reset/_variables.scss
+++ b/sass/reset/_variables.scss
@@ -1,13 +1,26 @@
 
+//---- FUENTES ----// 
 
-// H1
+// h1
 
 $h1-fonts: "Audiowide", "sans-serif";
 $h1-color:#f5f5f5;
 $h1-size:3rem;
 $h1-align: center;
 
-// BORDERS
+//  h2
+
+$h2-fonts: "Audiowide", "sans-serif";
+
+// normal text //
+
+$txt-fonts: "jaldi";
+$caption-size:1em;
+$caption-color:#f5f5f5;
+
+//---- BORDES ----//
+
+// borders
 
 $contact__bdr--color:#cc2059;
 $contact__bdr--size:4px;
