--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@
   font-size: 20px;
 }
 
+main {
+  margin-top: 188px;
+}
+
 /* reset-fuentes */
 .jaldi-regular {
   font-family: "jaldi", sans-serif;
@@ -41,6 +45,10 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: flex-end;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
   background-color: #f5f5f5;
   border-bottom: 5px solid #cc2059;
 }
@@ -67,9 +75,20 @@ main {
   width: 50%;
 }
 
+/* animaciones */
+.animate__fadeInDown {
+  animation-duration: 3s;
+}
+.animate__fadeInUp {
+  animation-duration: 3s;
+}
+.animate__fadeIn {
+  animation-duration: 4s;
+}
+
 .carousel-caption {
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.1);
@@ -83,42 +102,53 @@ main {
   flex-direction: column;
   padding: 0px;
 }
-
-.card-img {
-  display: flex;
-  justify-content: center;
-}
-.card-img img {
-  width: 100%;
-  min-width: 200px;
-}
-
-.fm__card__description {
+.fm__cards__description {
   padding: 0 10px;
   background-color: rgba(0, 0, 0, 0.1);
   /* fondo semitransparente */
 }
-.fm__card__description h2 {
+.fm__cards__description h2 {
   text-align: center;
   color: #f5f5f5;
-  font-family: audiowide;
+  font-family: "Audiowide", "sans-serif";
   font-size: 1.5em;
 }
-.fm__card__description p {
+.fm__cards__description p {
   text-align: justify;
   padding: 0 30px;
   color: #f5f5f5;
-  font-family: jaldi;
+  font-family: "jaldi";
   font-size: 1em;
+}
+.fm__cards__img {
+  display: flex;
+  justify-content: center;
+}
+.fm__cards__img img {
+  width: 100%;
+  min-width: 200px;
+}
+
+.animate__slideInLeft {
+  animation-duration: 4s;
+}
+.animate__slideInRight {
+  animation-duration: 4s;
+}
+.animate__FadeInUp {
+  animation-duration: 4s;
+}
+.animate__fadeIn {
+  animation-duration: 8s;
 }
 
 /* main faq */
 .accordion-header {
-  font-family: audiowide;
+  font-family: "Audiowide", "sans-serif";
 }
 
 .accordion-body {
-  font-family: jaldi;
+  font-family: "jaldi";
 }
 
 .accordion-item {
@@ -148,7 +178,7 @@ main {
   box-shadow: 0 5px 10px -5px;
   background-color: #d8d3d3;
   border: 4px solid #cc2059;
-  font-family: jaldi;
+  font-family: "jaldi";
   font-size: 1em;
   color: #000000;
 }
@@ -171,13 +201,14 @@ main {
   color: #0e0d0d;
   border: 4px solid #cc2059;
   border-radius: 5px;
-  font-family: jaldi;
+  font-family: "jaldi";
 }
 .fm__contact__container__info__list li {
   padding: 20px;
   list-style: none;
 }
 .fm__contact__container__info__list h2 {
+  font-family: "Audiowide", "sans-serif";
   text-align: center;
 }
 
@@ -195,7 +226,7 @@ main {
   border: none;
   outline: none;
   text-align: center;
-  font-family: jaldi;
+  font-family: "jaldi";
   font-size: 1em;
   background-color: #f5deb3;
   border-bottom: 3px solid #2076f7;
@@ -208,7 +239,7 @@ main {
   width: 100%;
   height: 140px;
   text-align: justify;
-  font-family: jaldi;
+  font-family: "jaldi";
   font-size: 0.8em;
   background-color: #f5deb3;
   border-bottom: 3px solid #2076f7;
@@ -237,14 +268,14 @@ main {
   border: 2px solid rgb(31, 30, 30);
 }
 .fm__us-container__section__article--text {
-  font-family: jaldi-bold;
+  font-family: "jaldi";
   text-align: justify;
 }
 .fm__us-container__section__article--text h2 {
   text-align: center;
 }
 .fm__us-container__section__article--text2 {
-  font-family: jaldi-bold;
+  font-family: "jaldi";
   text-align: center;
 }
 
@@ -262,18 +293,12 @@ footer h2 {
   font-family: audiowide;
   color: #f5f5f5;
 }
-
-.footer-element {
-  width: 450px;
-}
-
 .fm__footer__container__copyright {
   width: 100%;
   font-family: audiowide;
   color: #f5f5f5;
   font-size: 1rem;
 }
-
 .fm__footer__container__links {
   text-decoration: none;
   color: #f4f5f8;
@@ -284,7 +309,6 @@ footer h2 {
 .fm__footer__container__links a:hover {
   transform: scale(1.2);
 }
-
 .fm__footer__container__mail a {
   font-size: 25px;
   font-family: jaldi !important;
@@ -294,6 +318,16 @@ footer h2 {
 .fm__footer__container__mail a:hover {
   transform: scale(1.2);
 }
+.fm__footer__container__logo {
+  text-align: center;
+}
+.fm__footer__container__logo img {
+  width: 200px;
+}
+
+.footer-element {
+  width: 450px;
+}
 
 .fm__footer-logo {
   justify-content: flex-end;
@@ -301,13 +335,6 @@ footer h2 {
   width: 450px;
   text-align: center;
   height: 100px;
-}
-
-.fm__footer__container__logo {
-  text-align: center;
-}
-.fm__footer__container__logo img {
-  width: 200px;
 }
 
 /* @media */
