--- a/sass/products/_main-prodcuts.scss
+++ b/sass/products/_main-prodcuts.scss
@@ -6,26 +6,16 @@
     display: flex;
     flex-direction: column;
     padding: 0px;
-}
 
-.card-img {
-    display: flex;
-    justify-content: center;
-
-         img {
-            width: 100%;
-            min-width: 200px;
-        }
-}
-.fm__card__description {
-    padding: 0 10px;
-    background-color: rgba(0, 0, 0, 0.1);
-    /* fondo semitransparente */
+    &__description {
+        padding: 0 10px;
+        background-color: rgba(0, 0, 0, 0.1);
+        /* fondo semitransparente */
     
          h2 {
             text-align: center;
             color: #f5f5f5;
-            font-family: audiowide;
+            font-family: $h2-fonts;
             font-size: 1.5em;
         }
 
@@ -33,7 +23,33 @@
             text-align: justify;
             padding: 0 30px;
             color: #f5f5f5;
-            font-family: jaldi;
-            font-size: 1em;
+            font-family: $txt-fonts;
+            font-size: $caption-size;
         }
+    }
+
+    &__img {
+        display: flex;
+        justify-content: center;
+
+        img {
+            width: 100%;
+            min-width: 200px;
+        }
+    }
+}
+
+.animate {
+    &__slideInLeft {
+        animation-duration: 4s;
+    }
+    &__slideInRight {
+        animation-duration: 4s;
+    }
+    &__FadeInUp {
+        animation-duration: 4s;
+    }
+    &__fadeIn {
+        animation-duration: 8s
+    }
 }
