--- a/sass/reset/_config.scss
+++ b/sass/reset/_config.scss
@@ -9,6 +9,12 @@
     font-size: 20px;
 }
 
+// MAIN -margin
+
+main {
+    margin-top: 188px;
+}
+
 /* reset-fuentes */
 
 .jaldi-regular {
@@ -31,6 +37,8 @@
 
 
 
+
+
 // TITULOS PRINCIPALES
 
 /* h1 */
@@ -41,3 +49,5 @@
     font-family: $h1-fonts;
     font-size: $h1-size;
 }
+
+
