--- a/sass/contact/_main-contact.scss
+++ b/sass/contact/_main-contact.scss
@@ -25,13 +25,10 @@
     border-radius: 10px;
     box-shadow: 0 5px 10px -5px;
     background-color: #d8d3d3;
-    border: $contact__bdr--size solid $contact__bdr--color;
-    font-family: $txt-fonts;
-    font-size: $caption-size;
-    color: #000000;
+    @include normal-txt;
 
         &__h2 {
-        color: #030303;
+            color: #030303;
             font-family: audiowide;
             font-size: 2em;
         }
@@ -52,10 +49,8 @@
         align-self: flex-end;
         margin-bottom: 30px;
         background-color: #f5f5f5;
-        color: #0e0d0d;
-        border: $contact__bdr--size solid $contact__bdr--color;
         border-radius: 5px;
-        font-family: $txt-fonts;
+        @include normal-txt;
 
         &__list {
             li {
@@ -82,24 +77,19 @@
 }
 
 .form-input {
-    width: 100%;
-    height: 30px;
-    border: none;
+    @include size (100%, 30px, none, none);
     outline: none;
     text-align: center;
     font-family: $txt-fonts;
     font-size: 1em;
     background-color: #f5deb3;
-    border-bottom:$contact__bdr__form--size solid $contact__bdr__form--color;
-
         :focus {
              border: 2px dotted #0a0a0a;
             }
 }
 
 .form-text_area {
-    width: 100%;
-    height: 140px;
+    @include size (100%, 140px, none, none);
     text-align: justify;
     font-family: $txt-fonts;
     font-size: 0.8em;
@@ -112,12 +102,10 @@
 }
 
 .form-submit {
-    width: 200px;
-    height: 50px;
-    margin: 30px;
+    @include size (200px, 50px, 30px, none);
     font-family: audiowide;
     background-color: #c5bdbdde;
-    border: $contact__bdr__form--size solid $contact__bdr__form--color;
+    @include form-bdr;
     cursor: pointer;
 }
 
