--- a/sass/us/_main-us.scss
+++ b/sass/us/_main-us.scss
@@ -8,7 +8,7 @@
     &__section {
         background-color: #f5f5f5;
         border-radius: 10px;
-        border: 2px solid rgb(31, 30, 30);
+        border: map-get($map:$borders, $key:us) 3px solid;
 
         &__article--text{
             font-family: $txt-fonts;
