--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -19,6 +19,16 @@
         justify-content: start;
     }
 
+    .fm__header-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: start;
+        align-items: flex-end;
+        width: 100%;
+        background-color: #f5f5f5;
+        border-bottom: 5px solid #cc2059;
+    }
+
     
     /* @main */
 
