header position en modo landscape corregido

--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,11 @@ footer h2 {
 }
 
 /* @media */
+@media only screen and (max-width: 1124px) and (orientation: landscape) {
+  .fm__header-container {
+    position: absolute;
+  }
+}
 /* mobile */
 @media (max-width: 768px) {
   /* @header */
@@ -371,18 +376,6 @@ footer h2 {
   }
   .header__container {
     justify-content: flex-start;
-  }
-  .fm__header-container {
-    justify-content: start;
-  }
-  .fm__header-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
-    align-items: flex-end;
-    width: 100%;
-    background-color: #f5f5f5;
-    border-bottom: 5px solid #cc2059;
   }
   /* @main */
   .fm__h1 {
