--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -2,6 +2,12 @@
 
 /* @media */
 
+@media only screen and (max-width: 1124px) and (orientation: landscape) {
+    .fm__header-container {
+        position: absolute; 
+    }
+}
+
 /* mobile */
 
 @media (max-width: 768px) {
@@ -13,20 +19,6 @@
 
     .header__container {
         justify-content: flex-start;
-    }
-
-    .fm__header-container {
-        justify-content: start;
-    }
-
-    .fm__header-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: start;
-        align-items: flex-end;
-        width: 100%;
-        background-color: #f5f5f5;
-        border-bottom: 5px solid #cc2059;
     }
 
     
