--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 }
 
 main {
-  margin-top: 187px;
+  margin-top: 100px;
 }
 
 /* reset-fuentes */
@@ -66,6 +66,9 @@ main {
   position: fixed;
   top: 0;
   width: 100%;
+  height: none;
+  margin: none;
+  padding: none;
   z-index: 999;
   background-color: #f5f5f5;
   border-bottom: 5px solid #cc2059;
@@ -112,6 +115,15 @@ main {
   background-color: rgba(0, 0, 0, 0.1);
   /* fondo semitransparente */
   color: white;
+}
+.carousel-caption a {
+  font-size: 25px;
+  font-family: jaldi !important;
+  text-decoration: none;
+  color: #f4f5f8;
+}
+.carousel-caption h5 {
+  font-family: "Audiowide", "sans-serif";
 }
 
 /* main prodcuts */
