--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,7 +9,7 @@
     align-items: flex-end;
     position: fixed;
     top: 0;
-    width: 100%;
+    @include size (100%, none, none, none);
     z-index: 999;
     background-color: #f5f5f5;
     border-bottom: 5px solid #cc2059;
