--- a/sass/index/_main-index.scss
+++ b/sass/index/_main-index.scss
@@ -2,7 +2,7 @@
 /* main-index */
 
 main {
-    background-image: url(../assets/background-main4.jpg);
+    background-image: url(../assets/background-main4.webp);
     background-size: cover;
 }
 
