--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 }
 
 main {
-  margin-top: 100px;
+  margin-top: 156px;
 }
 
 /* reset-fuentes */
@@ -61,7 +61,7 @@ main {
 .fm__header-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: flex-end;
   position: fixed;
   top: 0;
@@ -88,7 +88,7 @@ main {
 
 /* main-index */
 main {
-  background-image: url(../assets/background-main4.jpg);
+  background-image: url(../assets/background-main4.webp);
   background-size: cover;
 }
 
@@ -405,6 +405,13 @@ footer h6 {
   }
   .fm__contact__container__form {
     padding: 5px;
+  }
+  .fm__contact__container__info {
+    width: 90%;
+    min-width: 300px;
+  }
+  .row {
+    width: 100%;
   }
   /* @footer */
   .footer-element {
