modificado el ocmprtamiento del nav desplegable mobile v

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,7 +5,7 @@
 .fm__header-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: flex-end;
     position: fixed;
     top: 0;
