--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -13,6 +13,10 @@
 @media (max-width: 768px) {
 
     /* @header */
+
+    .fm__header-container {
+        justify-content: flex-start;
+    }
     .navbar-brand img {
         width: 100%;
     }
